--- a/style.css
+++ b/style.css
@@ -16,5 +16,30 @@ img {
 }
 
 .row {
-  margin: 20px 0px;
+  padding: 20px;
+}
+
+#modal {
+  width: 60%;
+  height: 70vh;
+  background-color: #ffff;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: block;
+  z-index: 999;
+}
+
+#modal-bg {
+  background-color: rgba(0, 0, 0, 0.3);
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  display: block;
+  z-index: 998;
+}
+
+.hidden {
+  display: none !important;
 }
